--- a/dash.html
+++ b/dash.html
@@ -97,7 +97,7 @@
     </header>
     <div id="taskbar"> 
         <a href="http://localhost:2525/EVM/History" class="task">History</a>
-        <a href="http://localhost:2525/EVM/Tickets" class="task">Tickets</a>
+        <a href="http://localhost:2525/EVM/ViewTicket" class="task">Tickets</a>
         <div id="search-bar">
             <input type="text" id="search-input" placeholder="Search...">
             <button id="search-button">Search</button>
@@ -109,7 +109,7 @@
     <main>
       <h1>Welcome to your user dashboard</h1>
       <p>Here you can view your account information, purchase history, and manage your tickets.</p>
-      <form action="http://localhost:2525/EVM/Apply?e_id=1" method="GET" name="Profile" style="margin:auto; margin-top: 30px; padding: 10px; border: 1px solid black; width: 50%; text-align: center;">
+      <form action="http://localhost:2525/EVM/Apply?e_id=2" method="GET" name="Profile" style="margin:auto; margin-top: 30px; padding: 10px; border: 1px solid black; width: 50%; text-align: center;">
         <input type="submit" value="Apply"/>
     </form>
     </main>
