events and carousel

--- a/host/dash.html
+++ b/host/dash.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <header>
-      <h1 style="color:#ddd">User Dashboard</h1>
+      <h1 style="color:#ddd">Host Dashboard</h1>
     </header>
     <div id="taskbar"> 
         <a href="http://localhost:2525/EVM/History" class="task">History</a>
@@ -106,13 +106,13 @@
         <a href="http://localhost:2525/EVM/Logout" class="task">Logout</a>
     </div>
     
-    <main>
+    <!-- <main>
       <h1>Welcome to your user dashboard</h1>
       <p>Here you can view your account information, purchase history, and manage your tickets.</p>
       <form action="http://localhost:2525/EVM/Apply" method="GET" name="Profile" style="margin:auto; margin-top: 30px; padding: 10px; border: 1px solid black; width: 50%; text-align: center;">
         <input type="hidden" value="2" name="e_id">
         <input type="submit" value="Apply"/>
     </form>
-    </main>
+    </main> -->
 </body>
 </html>
