--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 if (this.readyState == 4 && this.status == 200) {
                     var val=xhttp.responseText;
                     if(val == "user"){
-                        window.location.href = "http://localhost:2525/EVM/users/dash.html";
+                        window.location.href = "http://localhost:2525/EVM/dash.html";
                     }
                     else if(val=="host"){
-                        window.location.href = "http://localhost:2525/EVM/host/dash.html";
+                        window.location.href = "http://localhost:2525/EVM/dash_host.html";
                     }
                     else{
                         document.getElementById('error').innerHTML=val;  
