--- a/apply.html
+++ b/apply.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <style>
         body {
@@ -152,7 +152,7 @@
             padding: 5%;
         }
     </style>
-    <link rel="stylesheet" href="../css/app-style.css">
+    <link rel="stylesheet" href="./css/app-style.css">
 </head>
 
 <body>
@@ -306,8 +306,8 @@
                         <p class="dis mb-3">Complete your purchase by paying in this QR</p>
                     </div>
                     <div>
-                        <img src="../assets/upi.jpg">
-                        <img src="../assets/barcode.png" width="150%">
+                        <img src="./assets/upi.jpg">
+                        <img src="./assets/barcode.png" width="150%">
                         <p class="fw-bold" style="text-align: center;">Scan and pay with any BHIM UPI App</p>   
                     </div>
                 </div>
