--- a/dash.html
+++ b/dash.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
     <head>
 
 		<!-- Required meta tags -->
@@ -13,9 +12,9 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/animate.css">
-        <link rel="stylesheet" href="../css/media-queries.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="css/media-queries.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <style>
             body { font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400; color: #888; line-height: 30px; text-align: center; }
@@ -61,10 +60,10 @@
                 background-size: cover;
             }
 
-            .top-content .carousel-item-1 { background-image: url(../assets/1.jpeg); }
-            .top-content .carousel-item-2 { background-image: url(../assets/2.jpeg); }
-            .top-content .carousel-item-3 { background-image: url(../assets/3.jpeg);}
-            .top-content .carousel-item-4 { background-image: url(../assets/4.jpeg); }
+            .top-content .carousel-item-1 { background-image: url(assets/1.jpeg); }
+            .top-content .carousel-item-2 { background-image: url(assets/2.jpeg); }
+            .top-content .carousel-item-3 { background-image: url(assets/3.jpeg);}
+            .top-content .carousel-item-4 { background-image: url(assets/4.jpeg); }
 
             .top-content .carousel-control-prev { border-bottom: 0; }
             .top-content .carousel-control-next { border-bottom: 0; }
@@ -164,7 +163,7 @@
             <!-- End carousel -->
         </div>
         <!-- Javascript -->
-		<script src="../js/jquery-3.5.1.min.js"></script>
+		<script src="js/jquery-3.5.1.min.js"></script>
 		<!-- <script src="assets/js/jquery-migrate-3.3.0.min.js"></script>		 -->
 		<!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script> -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
