--- a/sub-event.html
+++ b/sub-event.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/animate.css">
-    <link rel="stylesheet" href="../css/media-queries.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/animate.css">
+    <link rel="stylesheet" href="./css/media-queries.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>
         /***** Top menu *****/
         body { font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400; color: #888; line-height: 30px; text-align: center; background-color: #333333;}
@@ -116,44 +116,31 @@
 		</nav>
         <!-- Main page Contents -->
         <div class="main">
-            <div class="container">
-                <div class="row sub-event">
-                    <div class="col">
-                        <img src="../assets/1.jpeg">
-                    </div>
-                    <div class="col">
-                        <p style="color: #000;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-                <div class="row sub-event">
-                    <div class="col">
-                        <img src="../assets/2.jpeg">
-                    </div>
-                    <div class="col">
-                        <p style="color: #000;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+            <div class="container" id="cont">
+                <h2 style="color: black; background-color: white;">NO SUB-EVENTS</h2>
             </div>
-            <!-- <div class="row md-2">
-                <div class="card" style="width: 20rem; margin-right: 1rem; margin-bottom: 2rem;">
-                    <img class="card-img-top" src="assets/51775-gradient-pink-blue-simple_background-simple-abstract.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-                <div class="card" style="width: 20rem; margin-right: 1rem; margin-bottom: 2rem;">
-                    <img class="card-img-top" src="assets/51775-gradient-pink-blue-simple_background-simple-abstract.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-                <div class="card" style="width: 20rem; margin-right: 1rem; margin-bottom: 2rem;">
-                    <img class="card-img-top" src="assets/51775-gradient-pink-blue-simple_background-simple-abstract.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div> -->
         </div>
+        <!-- Footer -->
+        <footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50" style="background-color: #000;">
+            <div class="container text-center">
+            <button type="button" class="btn btn-primary" onclick="location.href = './apply.html';">Apply Now</button>
+            </div>
+        </footer>
+        <script>
+            const queryString = window.location.search;
+            const urlParams = new URLSearchParams(queryString);
+            const id = urlParams.get('id');
+            // console.log(page_type);
+            var xhttp = new XMLHttpRequest();
+            var url = "SubEvent?id="+id;
+            xhttp.onreadystatechange = function(){
+                if(xhttp.readyState == 4 && xhttp.status==200){
+                    if(xhttp.responseText != '')
+                        document.getElementById('cont').innerHTML = xhttp.responseText;
+                }
+            }
+            xhttp.open("GET",url,true);
+            xhttp.send();
+        </script>
     </body>
 </html>
