--- a/profile.html
+++ b/profile.html
@@ -191,10 +191,10 @@
                         <a class="nav-link scroll-link" href="./events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scroll-link" href="http://localhost:2525/EVM/ViewTicket">Ticket</a>
+                        <a class="nav-link scroll-link" href="./viewTicket.html">Ticket</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scroll-link" href="http://localhost:2525/EVM/History">History</a>
+                        <a class="nav-link scroll-link" href="./history.html">History</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link scroll-link" href="http://localhost:2525/EVM/Profile">Profile</a>
