--- a/ticket.html
+++ b/ticket.html
@@ -66,8 +66,11 @@
             </div>
         </div>
         <script>
+            const queryString = window.location.search;
+            const urlParams = new URLSearchParams(queryString);
+            const id = urlParams.get('id');
             var xhttp = new XMLHttpRequest();
-            var url = 'Generate?id=1';
+            var url = 'Generate?id='+id;
             xhttp.onreadystatechange = function(){
                 if(this.readyState == 4 && this.status == 200){
                     const splitLines = str => str.split(/\r?\n/);
