--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Profile</title>
     <!-- CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
@@ -88,69 +88,6 @@
             padding-left: 1rem;
         }
 
-        /***** Top content *****/
-
-        .top-content {
-            width: 100%;
-            padding: 0;
-        }
-
-        .top-content .carousel-item {
-            height: 100vh;
-            min-height: 400px;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .top-content .carousel-item-1 {
-            background-image: url(assets/1.jpeg);
-        }
-
-        .top-content .carousel-item-2 {
-            background-image: url(assets/2.jpeg);
-        }
-
-        .top-content .carousel-item-3 {
-            background-image: url(assets/3.jpeg);
-        }
-
-        .top-content .carousel-item-4 {
-            background-image: url(assets/4.jpeg);
-        }
-
-        .top-content .carousel-control-prev {
-            border-bottom: 0;
-        }
-
-        .top-content .carousel-control-next {
-            border-bottom: 0;
-        }
-
-        .top-content .carousel-caption {
-            padding-bottom: 60px;
-        }
-
-        .top-content .carousel-caption h1 {
-            padding-top: 60px;
-            color: #fff;
-        }
-
-        .top-content .carousel-caption h3 {
-            color: #fff;
-        }
-
-        .top-content .carousel-caption .carousel-caption-description {
-            color: #fff;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        .top-content .carousel-indicators li {
-            width: 16px;
-            height: 16px;
-            margin-left: 5px;
-            margin-right: 5px;
-            border-radius: 50%;
-        }
         .main {
             padding: 5%;
         }
