Host ticket approval, event add, sub event add

--- a/assets/dash_host.html
+++ b/assets/dash_host.html
@@ -205,7 +205,7 @@
             <a class="nav-link scroll-link" href="./events_host.html">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link scroll-link" href="./tickets_host.html">Tickets</a>
+            <a class="nav-link scroll-link" href="#">Ticket</a>
           </li>
           <li class="nav-item">
             <a class="nav-link scroll-link" href="http://localhost:2525/EVM/Logout">Logout</a>
