user and host done

--- a/add_sub.html
+++ b/add_sub.html
@@ -163,7 +163,7 @@
     </nav>
     <!-- Main page Contents -->
     <div class="main">
-        <form action="http://localhost:2525/EVM/AddSub  " method="POST">
+        <form action="http://localhost:2525/AddSub  " method="POST">
             <input type="hidden" name="id" id="e_id">
             <div class="form-row">
               <div class="form-group col-md-4">
@@ -217,7 +217,7 @@
                 </div>
                 
             </div>
-            <button type="submit" class="btn btn-primary">Create Event</button>
+            <button type="submit" class="btn btn-primary">Create Sub-Event</button>
           </form>
     </div>
     <script>
