--- a/add_admin.html
+++ b/add_admin.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sub Events</title>
+    <title>Hosted Events</title>
     <!-- CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -24,43 +25,22 @@
             color: #888;
             line-height: 30px;
             text-align: center;
-            background-color: #333333;
+            background-color: white;
         }
 
         strong {
             font-weight: 600;
         }
 
-        a {
-            color: #a365bc;
-            border-bottom: 1px dashed #a365bc;
+        a.view {
             text-decoration: none;
             transition: all .3s;
         }
 
-        a:hover,
-        a:focus {
-            color: #a365bc;
-            border: 0;
-            text-decoration: none;
-        }
-
-        h1,
-        h2 {
-            margin-top: 10px;
-            font-size: 38px;
-            font-weight: 300;
-            color: #555;
-            line-height: 50px;
-            font-style: italic;
-        }
-
-        h3 {
-            font-size: 22px;
-            font-weight: 300;
-            color: #555;
-            line-height: 30px;
-            font-style: italic;
+        a.view:hover,
+        a.view:focus {
+            background-color: lightblue;
+            border-radius: 45%;
         }
 
         img {
@@ -84,6 +64,7 @@
             background: #444;
             background: rgba(0, 0, 0, 0.2);
         }
+
         .navbar-dark .navbar-nav {
             font-size: 15px;
             color: #fff;
@@ -120,12 +101,84 @@
         .cent {
             margin-left: 38%;
         }
+        .table-responsive {
+        margin: 30px 0;
+    }
+	.table-wrapper {
+		min-width: 1000px;
+        background: #fff;
+        padding: 20px;        
+        box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    }
+	.table-title {
+        padding-bottom: 10px;
+        margin: 0 0 10px;
+    }
+    .table-title h2 {
+        margin: 8px 0 0;
+        font-size: 22px;
+    }
+    .search-box {
+        position: relative;        
+        float: right;
+    }
+    .search-box input {
+        height: 34px;
+        border-radius: 20px;
+        padding-left: 35px;
+        border-color: #ddd;
+        box-shadow: none;
+    }
+	.search-box input:focus {
+		border-color: #3FBAE4;
+	}
+    .search-box i {
+        color: #a0a5b1;
+        position: absolute;
+        font-size: 19px;
+        top: 8px;
+        left: 10px;
+    }
+    table.table tr th, table.table tr td {
+        border-color: #e9e9e9;
+    }
+    table.table-striped tbody tr:nth-of-type(odd) {
+    	background-color: #fcfcfc;
+	}
+	table.table-striped.table-hover tbody tr:hover {
+		background: #f5f5f5;
+	}
+    table.table th i {
+        font-size: 13px;
+        margin: 0 5px;
+        cursor: pointer;
+    }
+    table.table td:last-child {
+        width: 130px;
+    }
+    table.table td a {
+        color: #a0a5b1;
+        display: inline-block;
+        margin: 0 5px;
+    }
+	table.table td a.view {
+        color: #03A9F4;
+    }
+    table.table td a.edit {
+        color: #FFC107;
+    }
+    table.table td a.delete {
+        color: #E34724;
+    }
+    table.table td i {
+        font-size: 19px;
+    } 
     </style>
 </head>
 
 <body>
     <!-- Top menu -->
-    <nav class="navbar navbar-dark fixed-top navbar-expand-md navbar-no-bg">
+    <nav class="navbar navbar-dark fixed-top navbar-expand-md">
         <div class="container">
             <!-- <a class="navbar-brand" href="index.html">Bootstrap 4 Carousel Fullscreen Template</a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -141,7 +194,7 @@
                         <a class="nav-link scroll-link" href="./events_host.html">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scroll-link" href="#">Ticket</a>
+                        <a class="nav-link scroll-link" href="./tickets_host.html">Tickets</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link scroll-link" href="http://localhost:2525/EVM/Logout">Logout</a>
@@ -162,64 +215,61 @@
     </nav>
     <!-- Main page Contents -->
     <div class="main">
-        <div class="container" style="margin-bottom: 5rem;">
-            <div class="row float-right">
-                <a id="href" class="btn btn-primary btn-lg">
-                    <i class="fa fa-plus"></i> Sub-Event
-                </a>
-            </div>
-        </div>
-        <div class="container" id="cont">
-            <h2 style="color: black; background-color: white;">NO EVENT HOSTED YET</h2>
-            <!-- <div class="row sub-event">
-                    <div class="col">
-                        <img src="./assets/1.jpeg">
-                    </div>
-                    <div class="col">
-                        <p style="color: #000; font-size: large;"><strong>Pop Quiz</strong></p>
-                        <p style="color: #000;">Ever been interested of art and cinema?If so,join this event and win exciting prizes!</p>
+        <div class="container">
+            <div class="table-responsive">
+                <div class="table-wrapper">
+                    <div class="table-title">
                         <div class="row">
-                            <div class="cent">
-                                <p class="fw-bold" style="color: #000;">Ticket Cost:  <span class="fas fa-rupee-sign"></span><span style="font-weight: bold;font-size: medium;">100</span></p>
-                                <button class="fw-bold" style="background-color:dodgerblue;color: #000;border-radius: 8px;border-color: dodgerblue;" onclick="alert('yay');">Add Sub Event</button>
+                            <div class="col-sm-8"><h2>Available <strong>Admins</strong></h2></div>
+                            <div class="col-sm-4">
+                                <div class="search-box">
+                                    <i class="material-icons">&#xE8B6;</i>
+                                    <input type="text" id="search-box" class="form-control" placeholder="Search&hellip;">
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row sub-event">
-                    <div class="col">
-                        <img src="./assets/1.jpeg">
-                    </div>
-                    <div class="col">
-                        <p style="color: #000; font-size: large;"><strong>Mr.Cooper</strong></p>
-                        <p style="color: #000;">Ever imagined of treasures?Let's go in search of it!</p>
-                        <div class="row">
-                            <div class="cent">
-                                <p class="fw-bold" style="color: #000;">Ticket Cost:  <span class="fas fa-rupee-sign"></span><span style="font-weight: bold;font-size: medium;">100</span></p>
-                                <button class="fw-bold" style="background-color:dodgerblue;color: #000;border-radius: 8px;border-color: dodgerblue;" onclick="alert('yay');">Add Admin</button>
-                            </div>
-                        </div>
+                    <table class="table table-striped table-hover table-bordered" id="Table">
+                    </table>
+                    <div class="clearfix">
+                        <div class="hint-text">Showing <b>Top 5</b> results</div>
                     </div>
                 </div>
-            </div> -->
+            </div>        
         </div>
-        <script>
+    </div>
+    <script>
+        window.addEventListener("load", function() {
             const queryString = window.location.search;
             const urlParams = new URLSearchParams(queryString);
             const id = urlParams.get('id');
-            document.getElementById('href').href = './add_event.html?id='+id;
+            const s_id = urlParams.get('s_id');
+
             var xhttp = new XMLHttpRequest();
-            var url = "HostSubEvent?id="+id;
-            
-            xhttp.onreadystatechange = function () {
-                if (xhttp.status == 200 && xhttp.readyState == 4) {
-                    if (xhttp.responseText != '')
-                        document.getElementById('cont').innerHTML = xhttp.responseText;
-                }
+            var url="Search?id="+id+"&s_id="+s_id+"&key= ";
+            xhttp.onreadystatechange = function(){
+                    if(this.readyState==4 && this.status==200){
+                        // console.log(xhttp.responseText)
+                        document.getElementById("Table").innerHTML = xhttp.responseText;
+                    }
             }
-            xhttp.open("GET", url, true);
+            xhttp.open("GET",url,true);
             xhttp.send();
-        </script>
+            
+            document.getElementById("search-box").addEventListener("keyup", function(){
+                var xhttp = new XMLHttpRequest();
+                var url="Search?id="+id+"&s_id="+s_id+"&key="+escape(document.getElementById("search-box").value);
+                xhttp.onreadystatechange = function(){
+                        if(this.readyState==4 && this.status==200){
+                            // console.log(xhttp.responseText)
+                            document.getElementById("Table").innerHTML = xhttp.responseText;
+                        }
+                }
+                xhttp.open("GET",url,true);
+                xhttp.send();
+            })
+        }, false); 
+    </script
 </body>
 
 </html>
