--- a/admin.html
+++ b/admin.html
@@ -96,8 +96,8 @@
 			                <a class="nav-link scroll-link" href="./history.html">History</a>
 			            </li>
                         <li class="nav-item">
-                            <a class="nav-link scroll-link" href="./admin.html">Admin</a>
-                        </li>
+			                <a class="nav-link scroll-link" href="./admin.html">Admin</a>
+			            </li>
 			            <li class="nav-item">
 			                <a class="nav-link scroll-link" href="http://localhost:2525/EVM/Profile">Profile</a>
 			            </li>
@@ -120,34 +120,34 @@
         <!-- Main page Contents -->
         <div class="main">
             <div class="container" id="cont">
-                <h2 style="color: black; background-color: white;">NO SUB-EVENTS</h2>
+                <h2 style="color: black; background-color: white;">NO SUB-EVENTS ASSIGNED</h2>
             </div>
         </div>
         <!-- Footer -->
-        <footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50" style="background-color: #000;">
+        <!-- <footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50" style="background-color: #000;">
             <div class="container text-center">
             <button type="button" class="btn btn-primary" onclick="redirect()">Apply Now</button>
             </div>
-        </footer>
+        </footer> -->
         <script>
-            const queryString = window.location.search;
-            const urlParams = new URLSearchParams(queryString);
-            const id = urlParams.get('id');
-            // console.log(page_type);
+            // const queryString = window.location.search;
+            // const urlParams = new URLSearchParams(queryString);
+            // const id = urlParams.get('id'); 
+            // console.log(page_type);z
             var xhttp = new XMLHttpRequest();
-            var url = "SubEvent?id="+id;
+            var url = "AdminAccess";
             xhttp.onreadystatechange = function(){
                 if(xhttp.readyState == 4 && xhttp.status==200){
                     if(xhttp.responseText != '')
-                        document.getElementById('cont').innerHTML = xhttp.responseText;
+                        document.getElementById('cont').innerHTML= xhttp.responseText;
                 }
             }
             xhttp.open("GET",url,true);
             xhttp.send();
 
-            function redirect(){
-                location.href = './apply.html?id='+id;
-            }
+            // function redirect(){
+            //     location.href = './apply.html?id='+id;
+            // }
         </script>
     </body>
 </html>
