--- a/apply.html
+++ b/apply.html
@@ -115,6 +115,9 @@
                         <a class="nav-link scroll-link" href="./history.html">History</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link scroll-link" href="./admin.html">Admin</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link scroll-link" href="http://localhost:2525/EVM/Profile">Profile</a>
                     </li>
                     <li class="nav-item">
