--- a/dash.html
+++ b/dash.html
@@ -100,6 +100,9 @@
 			            <li class="nav-item">
 			                <a class="nav-link scroll-link" href="./history.html">History</a>
 			            </li>
+                        <li class="nav-item">
+			                <a class="nav-link scroll-link" href="./admin.html">Admin</a>
+			            </li>
 			            <li class="nav-item">
 			                <a class="nav-link scroll-link" href="http://localhost:2525/EVM/Profile">Profile</a>
 			            </li>
